--- a/app.json
+++ b/app.json
@@ -1,10 +1,15 @@
 {
   "expo": {
-    "name": "fromnrn",
-    "slug": "fromnrn",
+    "name": "SATF",
+    "slug": "SATF",
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "df2fc0b4-1cd0-47ba-bb15-255c7eb3c28f"
+      }
+    }
   }
 }
