--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "^2.16.0",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.30.1"
+    "react-native-screens": "^3.30.1",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0",
+    "@expo/metro-runtime": "~3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
