--- a/app.json
+++ b/app.json
@@ -10,6 +10,9 @@
       "eas": {
         "projectId": "b46a2fe3-774e-447d-81a6-a69d8263553a"
       }
+    },
+    "android": {
+      "package": "com.jairodeavila.SATF"
     }
   }
 }
