--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.1.3",
+    "@expo/metro-runtime": "~3.2.1",
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-community/datetimepicker": "^8.0.0",
+    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
-    "expo": "~50.0.14",
-    "expo-status-bar": "~1.11.1",
+    "expo": "~51.0.6",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.1",
     "react-native-camera": "^4.2.1",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
     "react-native-splash-screen": "^3.3.0",
