--- a/app.json
+++ b/app.json
@@ -2,6 +2,11 @@
   "expo": {
     "name": "SATF",
     "slug": "SATF",
+    "permissions": [
+      "CAMERA",
+      "READ_EXTERNAL_STORAGE",
+      "WRITE_EXTERNAL_STORAGE"
+    ],
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
