--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "axios": "^1.7.2",
     "expo": "~51.0.6",
+    "expo-barcode-scanner": "~13.0.1",
+    "expo-camera": "~15.0.9",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
