--- a/package.json
+++ b/package.json
@@ -20,13 +20,17 @@
     "expo": "~51.0.8",
     "expo-barcode-scanner": "~13.0.1",
     "expo-camera": "~15.0.9",
+    "expo-jwt": "^1.7.1",
     "expo-status-bar": "~1.12.1",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
     "react-native-camera": "^4.2.1",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-pure-jwt": "^3.0.2",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
     "react-native-splash-screen": "^3.3.0",
