--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native": "0.74.1",
     "react-native-camera": "^4.2.1",
     "react-native-elements": "^3.4.3",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-pure-jwt": "^3.0.2",
     "react-native-safe-area-context": "^4.9.0",
