--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "expo": "~51.0.8",
     "expo-barcode-scanner": "~13.0.1",
     "expo-camera": "~15.0.11",
+    "expo-file-system": "^17.0.1",
     "expo-jwt": "^1.7.1",
+    "expo-media-library": "^16.0.3",
+    "expo-permissions": "^14.4.0",
     "expo-status-bar": "~1.12.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
@@ -32,9 +35,11 @@
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-pure-jwt": "^3.0.2",
+    "react-native-qrcode-svg": "^6.3.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-view-shot": "^3.8.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
